--- a/package.json
+++ b/package.json
@@ -26,12 +26,16 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.2",
+    "firebase": "^10.5.2",
     "framer-motion": "^10.16.4",
     "next": "^13.5.4",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0"
+    "react-hook-form": "^7.47.0",
+    "react-icons": "^4.11.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.7.2",
