--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 NEXT_PUBLIC_FIREBASE_KEY= AIzaSyC1am-7mV-jMiI4EdtwhbYFDa4-3Jf9cW4
+NEXT_PUBLIC_OPEN_AI_KEY=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
