--- a/package.json
+++ b/package.json
@@ -26,15 +26,19 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@hookform/resolvers": "^3.3.2",
+    "@hookform/resolvers": "^2.9.10",
+    "@uploadcare/react-widget": "^2.4.5",
     "firebase": "^10.5.2",
     "framer-motion": "^10.16.4",
     "next": "^13.5.4",
     "next-pwa": "^5.6.0",
+    "openai": "^4.14.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
+    "react-multi-date-picker": "^4.4.1",
+    "react-use": "^17.4.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
