--- a/package.json
+++ b/package.json
@@ -27,11 +27,17 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^2.9.10",
+    "@types/js-cookie": "^3.0.5",
     "@uploadcare/react-widget": "^2.4.5",
+    "dayjs": "^1.11.10",
+    "downloadjs": "^1.4.7",
     "firebase": "^10.5.2",
     "framer-motion": "^10.16.4",
+    "html-to-image": "^1.11.11",
+    "js-cookie": "^3.0.5",
     "next": "^13.5.4",
     "next-pwa": "^5.6.0",
+    "next13-progressbar": "^1.0.4",
     "openai": "^4.14.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
