--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "framer-motion": "^10.16.4",
     "html-to-image": "^1.11.11",
     "js-cookie": "^3.0.5",
+    "js-file-download": "^0.4.12",
     "next": "^13.5.4",
     "next-pwa": "^5.6.0",
     "next13-progressbar": "^1.0.4",
