--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-icons": "^4.11.0",
     "react-multi-date-picker": "^4.4.1",
     "react-use": "^17.4.0",
+    "use-debounce": "^10.0.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
