--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^2.9.10",
     "@types/js-cookie": "^3.0.5",
+    "@types/react-detect-offline": "^2.4.3",
     "@uploadcare/react-widget": "^2.4.5",
     "dayjs": "^1.11.10",
     "downloadjs": "^1.4.7",
@@ -40,6 +41,7 @@
     "next13-progressbar": "^1.0.4",
     "openai": "^4.14.2",
     "react": "^18.2.0",
+    "react-detect-offline": "^2.4.5",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
