--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "react-multi-date-picker": "^4.4.1",
+    "react-paystack": "^4.0.3",
     "react-use": "^17.4.0",
     "use-debounce": "^10.0.0",
     "yup": "^1.3.2"
